@@ -31,7 +31,7 @@
 #define BASENAME "bahamut"
 #define MAJOR 1
 #define MINOR 8
-#define PATCH 2
+#define PATCH 3
 
 #define PATCHES ""
 
